ci: add shm transport lane (matrix); document http worker gap
Run the integration suite as a transport matrix:
- launch: the AF_UNIX worker pool (as before).
- shm: launch + the POSIX shared-memory side channel (VGI_RPC_SHM_SIZE_BYTES).
  Validated locally at 171 pass / 13 skip / 0 fail (identical to launch).

run-integration.sh gains a TRANSPORT=launch|http switch and a
VGI_RPC_SHM_SIZE_BYTES passthrough. TRANSPORT=http works locally but is NOT a
CI lane: comparing against the canonical vgi-python http worker showed it passes
sequence.test (table-function streaming) over http while the Java worker errors
on it. The haybarn runner's built-in skip_error_messages HTTP policy masks those
as skips, so an http run looks green while silently dropping ~table tests. The
Java HTTP streaming path needs a fix before http can be a real lane; documented
in ci/README.md and the script.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>